Started to implement Paging Library(not working yet)

--- a/app/src/main/res/layout/fragment_game_list.xml
+++ b/app/src/main/res/layout/fragment_game_list.xml
@@ -14,7 +14,7 @@ tools:mContext=".GameListFragment">
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:id="@+id/game"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 </androidx.recyclerview.widget.RecyclerView>
 
