--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/gameListFragment"
-        android:name="com.gmr.android.GameListFragment"
+        android:name="com.gmr.android.ui.GameListFragment"
         android:label="fragment_game_list"
         tools:layout="@layout/fragment_game_list" />
 </navigation>
