--- a/app/src/main/res/layout/fragment_game_detail.xml
+++ b/app/src/main/res/layout/fragment_game_detail.xml
@@ -10,68 +10,93 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/game_detail_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingStart="@dimen/padding_16"
+        android:paddingEnd="@dimen/padding_16">
 
         <ImageView
             android:id="@+id/game_detail_imageView"
             android:layout_width="match_parent"
             android:layout_height="160dp"
+            android:contentDescription="@string/game_image"
             app:background_image="@{result.background_image}"
-            android:contentDescription="@string/gameImage" />
+            app:error="@{@drawable/ic_rawg_logo}" />
 
         <TextView
             android:id="@+id/game_detail_name_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="@dimen/padding_8"
             android:text="@{`` + result.name}" />
-     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-         <TextView
-             android:id="@+id/game_detail_ratingText_textView"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="@string/rating" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/game_detail_ratingText_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rating" />
+
+            <TextView
+                android:id="@+id/game_detail_rating_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{`` + result.rating + '/'}" />
+
+            <TextView
+                android:id="@+id/game_detail_rating_top_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{` ` + result.rating_top}" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/game_detail_release_dateText_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/release_date" />
+
+            <TextView
+                android:id="@+id/game_detail_release_date_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{`` + result.released}" />
+        </LinearLayout>
+
         <TextView
-            android:id="@+id/game_detail_rating_textView"
+            android:id="@+id/game_detail_platformsText_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{`` + result.rating + '/'}" />
+            android:text="@string/platforms"/>
 
+        <include
+            android:id="@+id/detail_platforms_layout"
+            layout="@layout/platforms_item"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <TextView
-            android:id="@+id/game_detail_rating_top_textView"
+            android:id="@+id/game_detail_genresText_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{`` + result.rating_top}" />
-     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/game_detail_release_dateText_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/releaseDate" />
-        <TextView
-            android:id="@+id/game_detail_release_date_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{`` + result.released}" />
-    </LinearLayout>
-
-        <TextView
-            android:id="@+id/game_detail_platforms_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
+            android:text="@string/genres"/>
         <TextView
             android:id="@+id/game_detail_genres_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
+
 </layout>
