--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="horizontal" android:layout_width="match_parent"
-android:layout_height="wrap_content">
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:orientation="horizontal">
+
 <androidx.appcompat.widget.AppCompatImageView
+    android:id="@+id/game_image"
     android:layout_width="60dp"
-    android:layout_height="60dp"
-    android:id="@+id/game_image"/>
+    android:layout_height="60dp" />
+
 <LinearLayout
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
     <TextView
+        android:id="@+id/game_name_textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/game_name_textView"/>
+        android:layout_height="wrap_content" />
+
     <TextView
+        android:id="@+id/game_rating_textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/game_rating_textView"/>
+        android:layout_height="wrap_content" />
+
     <TextView
+        android:id="@+id/game_rating_top_textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/game_rating_top_textView"/>
+        android:layout_height="wrap_content" />
+
+    <include
+        android:id="@+id/platforms_layout"
+        layout="@layout/platforms_item" />
+
     <TextView
+        android:id="@+id/game_genres_textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/game_platforms_textView"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/game_genres_textView"/>
+        android:layout_height="wrap_content" />
 </LinearLayout>
 </LinearLayout>
