--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -2,40 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
-android:orientation="horizontal">
+android:orientation="horizontal"
+android:padding="@dimen/padding_4">
 
-<androidx.appcompat.widget.AppCompatImageView
+<ImageView
     android:id="@+id/game_image"
-    android:layout_width="60dp"
-    android:layout_height="60dp" />
+    android:layout_width="0dp"
+    android:layout_height="match_parent"
+    android:layout_weight="1"
+    android:contentDescription="@string/game_image" />
 
 <LinearLayout
-    android:layout_width="match_parent"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_weight="4"
+    android:orientation="vertical"
+    android:padding="@dimen/padding_4">
 
     <TextView
         android:id="@+id/game_name_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        style="@style/GameListNameTextViewStyle" />
 
     <TextView
-        android:id="@+id/game_rating_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/game_rating_top_textView"
+        android:id="@+id/game_genres_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <include
         android:id="@+id/platforms_layout"
         layout="@layout/platforms_item" />
-
-    <TextView
-        android:id="@+id/game_genres_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 </LinearLayout>
 </LinearLayout>
